# sensevoice.axera

./: .gitignore  README.md  SenseVoiceAx.py  SenseVoiceOnnx.py  SenseVoicePth.py  cert.pem  download_utils.py  frontend.py  gradio_demo.py  key.pem  main.py  print_utils.py  pth_infer.py  requirements.txt  server.py  test_wer.py  tokenizer.py
cpp/: CMakeLists.txt  convert_tokens.py  download_bsp.sh  main.cpp  tokens.txt
cpp/ax630c/: test_sensevoice
cpp/ax630c/lib/cmake/ax_asr_api/: ax_asr_api-config.cmake
cpp/ax650/: test_sensevoice
cpp/ax650/include/: ax_asr_api.h
cpp/ax650/lib/cmake/ax_asr_api/: ax_asr_api-config-debug.cmake  ax_asr_api-config-release.cmake
cpp/src/: EngineWrapper.cpp  EngineWrapper.hpp  SenseVoice.hpp  Tokenizer.hpp  WavFrontend.cpp  WavFrontend.hpp
model_convert/: README.md  SenseVoiceOnnx.py  SenseVoicePth.py  export.py  export_meta.py  export_onnx.py  generate_data.py  model.py  requirements.txt  sensevoice.json
model_convert/utils/: export_utils.py  model_bin.py
python/: SenseVoiceAx.py  frontend.py  gradio_demo.py  main.py  requirements.txt  server.py  test_wer.py
